# LBOPT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LB_branch_and_bound  Makefile  README.md  callgrind.out.1001  callgrind.out.1220  callgrind.out.1652  callgrind.out.2042  callgrind.out.834  callgrind.out.864  cmake_install.cmake  gmon.out  io.hpp  lbnode.cpp  lbnode.hpp  lbplot.py  main.cpp  scenario.cpp  scenario.hpp  simparam.hpp  utils.cpp  utils.hpp
include/: lbnode.hpp  scenario.hpp  simparam.hpp  utils.hpp  workload.hpp
results/: freq-100-solution.txt  menon-solution-1.txt  menon-solution.txt  optimal-solution-0.txt  proca-solution.txt  s1.txt
script/: build-figures.sh  lbplot.py
src/: io.cpp  lbnode.cpp  main.cpp  scenario.cpp  utils.cpp  workloads.cpp
